fix(site): fix markdown iframe overflow

--- a/packages/site/src/app/markdown-elements/iframe/iframe.component.less
+++ b/packages/site/src/app/markdown-elements/iframe/iframe.component.less
@@ -1,9 +1,10 @@
 :host {
   display: block;
+  height: 500px;
   margin: 1rem 0;
   border: 1px solid var(--tui-base-03);
   border-radius: 4px;
-  height: 500px;
+  overflow: hidden;
 }
 
 iframe {
